log
Sun Apr 10 20:57:09 HSP 2022: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     new->buckets = (Pair *) calloc(capacity, sizeof(Pair));
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
28611ca
Sun Apr 10 20:58:21 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
0222ab9
Sun Apr 10 20:58:38 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1b0f043
Sun Apr 10 21:08:43 HSP 2022: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
fb64880
Sun Apr 10 21:10:36 HSP 2022: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|0
127fe0e
